# Software-Ray-Tracer

./: .clang-format  .gitignore  CMakeLists.txt  CMakeListsOLD.txt  README.md
src/: camera.hpp  color.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  main.cpp  material.hpp  math_utils.hpp  ray.hpp  sphere.cpp  sphere.hpp  vector3.hpp
